# MeetApp

./: .gitignore
client/: CMakeLists.txt  main.cpp  main_window.qml  resources.qrc
server/: CMakeLists.txt  main.cpp
